--- a/bleep.yaml
+++ b/bleep.yaml
@@ -10,14 +10,14 @@ projects:
     extends: template-scala-3-jvm
   tests:
     dependencies: org.scalatest::scalatest:3.2.13
-    dependsOn: tui-scala
+    dependsOn: tui
     extends: template-cross-all
     isTestProject: true
     sources: ../submodules/cassowary-rs/tests
   crossterm: {}
   cassowary:
     extends: template-cross-all
-  tui-scala:
+  tui:
     dependsOn:
       - crossterm
       - cassowary
@@ -29,7 +29,7 @@ projects:
   demo:
     dependencies:
     - org.graalvm.nativeimage:svm:22.3.0
-    dependsOn: tui-scala
+    dependsOn: tui
     extends: template-cross-all
     platform:
       mainClass: tui.demo
