--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "submodules/tui-rs"]
 	path = submodules/tui-rs
-	url = https://github.com/fdehau/tui-rs.git
+	url = https://github.com/oyvindberg/tui-rs.git
+    branch = master
+    update = rebase
