--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Compile, test, check formatting
     timeout-minutes: 15
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
@@ -32,7 +33,7 @@ jobs:
           bleep test
 
   build-native:
-    name: Native build on ${{ matrix.os }}
+    name: Build JNI library on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
     strategy:
@@ -103,7 +104,7 @@ jobs:
           path: ${{ matrix.jni-folder }}
           retention-days: 1
 
-  release:
+  package:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     needs: [ build, build-native ]
