--- a/bleep.yaml
+++ b/bleep.yaml
@@ -17,9 +17,10 @@ projects:
     dependencies:
     - build.bleep::bleep-plugin-jni:${BLEEP_VERSION}
     - build.bleep::bleep-plugin-native-image:${BLEEP_VERSION}
+    - build.bleep::bleep-plugin-ci-release:${BLEEP_VERSION}
     extends:
       - template-scala-common
-      - template-scala-3
+      - template-scala-2
   tests:
     dependencies: org.scalatest::scalatest:3.2.13
     dependsOn: tui
@@ -35,6 +36,8 @@ scripts:
   gen-native-image: scripts/tui.scripts.GenNativeImage
   gen-headers: scripts/tui.scripts.GenHeaders
   gen-jni-library: scripts/tui.scripts.GenJniLibrary
+  my-publish-local: scripts/tui.scripts.PublishLocal
+  publish: scripts/tui.scripts.Publish
 templates:
   template-scala-common:
     scala:
@@ -45,11 +48,13 @@ templates:
   template-cross-scala:
     cross:
       jvm213:
-        scala:
-          version: 2.13.6
+        extends: template-scala-2
       jvm3:
         extends: template-scala-3
     extends: template-scala-common
+  template-scala-2:
+    scala:
+      version: 2.13.6
   template-scala-3:
     scala:
       version: 3.3.0-RC1-bin-20221130-72c4ffd-NIGHTLY
