--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,11 +104,11 @@ jobs:
           path: ${{ matrix.jni-folder }}
           retention-days: 1
 
-  package:
+  publish:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     needs: [ build, build-native ]
-#    if: "startsWith(github.ref, 'refs/tags/v')"
+    if: "startsWith(github.ref, 'refs/tags/v')"
     steps:
       - uses: actions/checkout@v2
         with:
@@ -121,25 +121,17 @@ jobs:
           path: .bleep/generated-resources/crossterm/
       - name: Display structure of downloaded files
         run: find .bleep/generated-resources/crossterm
-#      - name: Release
-#        run: |
-#          chmod +x ./artifacts/bleep-x86_64-pc-linux/bleep
-#          ./artifacts/bleep-x86_64-pc-linux/bleep --dev generate-resources
-#          ./artifacts/bleep-x86_64-pc-linux/bleep --dev publish
-#        env:
-#          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-#          PGP_SECRET: ${{ secrets.PGP_SECRET }}
-#          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-#          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-#      - name: Prepare files
-#        run: |
-#          export VERSION=${{ steps.get_version.outputs.version-without-v }}
-#          bash .github/prepare-release.sh
-#      - name: Upload-to-release
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          name: "${{ steps.get_version.outputs.version-without-v }}"
-#          prerelease: true
-#          generate_release_notes: true
-#          files: |
-#            work/release/*
+      - name: Release
+        run: bleep publish
+        env:
+          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+      - name: Upload-to-release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: "${{ steps.get_version.outputs.version-without-v }}"
+          prerelease: true
+          generate_release_notes: true
+          files: |
