--- a/crossterm/src/resources/META-INF/native-image/org.scala-lang/scala-lang/jni-config.json
+++ b/crossterm/src/resources/META-INF/native-image/org.scala-lang/scala-lang/jni-config.json
@@ -7,6 +7,13 @@
     "allDeclaredFields": true
   },
   {
+    "name": "java.util.List",
+    "allDeclaredConstructors": true,
+    "allPublicConstructors": true,
+    "allDeclaredMethods": true,
+    "allDeclaredFields": true
+  },
+  {
     "name": "tui.crossterm.Attribute",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
