--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,6 +113,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+      - uses: coursier/setup-action@v1.2.0-M3
+      - name: Install bleep stable
+        run: cs install --channel https://raw.githubusercontent.com/oyvindberg/bleep/master/coursier-channel.json bleep --verbose
       - id: get_version
         uses: battila7/get-version-action@v2
       - name: Download artifacts
