--- a/crossterm/src/resources/META-INF/native-image/org.scala-lang/scala-lang/jni-config.json
+++ b/crossterm/src/resources/META-INF/native-image/org.scala-lang/scala-lang/jni-config.json
@@ -455,6 +455,13 @@
     "allDeclaredFields": true
   },
   {
+    "name": "tui.crossterm.Command$Print",
+    "allDeclaredConstructors": true,
+    "allPublicConstructors": true,
+    "allDeclaredMethods": true,
+    "allDeclaredFields": true
+  },
+  {
     "name": "tui.crossterm.Command",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
