--- a/bleep.yaml
+++ b/bleep.yaml
@@ -1,7 +1,7 @@
 $schema: https://raw.githubusercontent.com/oyvindberg/bleep/master/schema.json
 $version: 0.0.1-M22
 jvm:
-  name: graalvm-java17:22.3.0
+  name: zulu:17.0.1
 projects:
   cassowary:
     extends: template-cross-scala
