--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,10 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: actions/checkout@v2
-      - uses: coursier/setup-action@v1.2.0-M3
+      - uses: bleep-build/bleep-setup-action@0.0.1
       - uses: coursier/cache-action@v6
         with:
           extraFiles: bleep.yaml
-
-      - name: Install bleep stable
-        run: cs install --channel https://raw.githubusercontent.com/oyvindberg/bleep/master/coursier-channel.json bleep --verbose
 
       - name: Scalafmt Check
         run: bleep fmt --check
@@ -48,7 +45,7 @@ jobs:
             jni-folder: .bleep\generated-resources\crossterm\native
     steps:
       - uses: actions/checkout@v2
-      - uses: coursier/setup-action@v1.2.0-M3
+      - uses: bleep-build/bleep-setup-action@0.0.1
       - uses: coursier/cache-action@v6
         with:
           extraFiles: bleep.yaml
@@ -62,11 +59,8 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.arch }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: v1-${{ runner.arch }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.arch }}-${{ runner.os }}-cargo-
-
-      - name: Install bleep stable
-        run: cs install --channel https://raw.githubusercontent.com/oyvindberg/bleep/master/coursier-channel.json bleep --verbose
 
       - name: Build jni library
         run: bleep gen-jni-library
@@ -79,8 +73,8 @@ jobs:
         # as is normal, everything involving windows is terrible.
         # - powershell doesn't work, for one: https://github.com/dirs-dev/directories-jvm/issues/49
         # - with `shell: cmd` only one command can be run at a time, so this is split up
-      - name: bleep compile-server auto-shutdown-enable (windows)
-        run: bleep compile-server auto-shutdown-enable
+      - name: bleep config compile-server auto-shutdown-enable (windows)
+        run: bleep config compile-server auto-shutdown-enable
         shell: cmd
         if: runner.os == 'Windows'
 
@@ -108,9 +102,7 @@ jobs:
     if: "startsWith(github.ref, 'refs/tags/v')"
     steps:
       - uses: actions/checkout@v2
-      - uses: coursier/setup-action@v1.2.0-M3
-      - name: Install bleep stable
-        run: cs install --channel https://raw.githubusercontent.com/oyvindberg/bleep/master/coursier-channel.json bleep --verbose
+      - uses: bleep-build/bleep-setup-action@0.0.1
       - id: get_version
         uses: battila7/get-version-action@v2
       - name: Download artifacts
