Remove need to workaround jni library path for native image (fixes #28)
- there is a long-standing bug involving resources in nested directories with graalvm. not sure why this doesnt affect everybody out there, including the sbt plugin where the naming standard comes from.

Anyway, let's change the mapping so instead of `$native/$platform/libname` we say `$native_$platform_libname`.
 For arm64/macOs it looks like this `libnative-arm64-darwin-crossterm.dylib`.

 That should hopefully sort it out.

--- a/bleep.yaml
+++ b/bleep.yaml
@@ -1,13 +1,13 @@
 $schema: https://raw.githubusercontent.com/oyvindberg/bleep/master/schema.json
 $version: 0.0.1-M25
 jvm:
-  name: zulu:17.0.1
+  name: graalvm-java17:22.3.1
 projects:
   cassowary:
     extends: template-cross-scala
   crossterm: {}
   demo:
-    dependencies: org.graalvm.nativeimage:svm:22.3.0
+    dependencies: org.graalvm.nativeimage:svm:22.3.1
     dependsOn: tui
     extends: template-cross-scala
     platform:
